# log-slicer

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: app.ndjson
src/: cli.rs  main.rs  output.rs
src/engine/: filter.rs  mod.rs  read.rs  record.rs  stats.rs
tests/: cli_smoke.rs
