[package]
name = "log-slicer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A fast, streaming log slicer for text and JSON logs (grep + jq vibes)."
repository = "https://github.com/3xpluto/log-slicer"
readme = "README.md"
keywords = ["cli", "logs", "json", "grep", "jq"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["parsing", "formatting"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
